lab2/lab2_ws/log/build_2023-07-22_10-28-58/safety_node/stderr.log
  File "/root/F1Tenth-Labs/lab2/lab2_ws/install/safety_node/lib/python3.8/site-packages/safety_node/safety_node.py", line 57
    continue
    ^
SyntaxError: 'continue' not properly in loop

